knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/doctor_id_2_c__c.field-meta.xml
<CustomField>
    <fullName>doctor_id_2_c__c</fullName>
    <externalDeveloperName>doctor_id_2__c</externalDeveloperName>
    <label>IMGAMG</label>
    <length>20</length>
    <type>Text</type>
</CustomField>