knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Driver_Licence_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Driver_Licence_Number_c__c</fullName>
    <externalDeveloperName>Driver_Licence_Number__c</externalDeveloperName>
    <label>Drivers License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>