knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Drivers_License_c__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Drivers_License__c</externalDeveloperName>
    <label>Drivers License</label>
    <type>Checkbox</type>
</CustomField>