knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Drivers_License_State_c__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_State_c__c</fullName>
    <externalDeveloperName>Drivers_License_State__c</externalDeveloperName>
    <label>Drivers License State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>