knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Drivers_License_Valid_Throgh_c__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Valid_Throgh_c__c</fullName>
    <externalDeveloperName>Drivers_License_Valid_Throgh__c</externalDeveloperName>
    <label>Drivers License Valid Through</label>
    <type>Date</type>
</CustomField>