knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/ECFMG_c__c.field-meta.xml
<CustomField>
    <fullName>ECFMG_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ECFMG__c</externalDeveloperName>
    <label>ECFMG</label>
    <type>Checkbox</type>
</CustomField>