knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Edit_Complete_c__c.field-meta.xml
<CustomField>
    <fullName>Edit_Complete_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Edit_Complete__c</externalDeveloperName>
    <label>Edit Complete</label>
    <type>Checkbox</type>
</CustomField>