knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Edit_File_Checked_by_c__c.field-meta.xml
<CustomField>
    <fullName>Edit_File_Checked_by_c__c</fullName>
    <externalDeveloperName>Edit_File_Checked_by__c</externalDeveloperName>
    <label>Edit File Checked by</label>
    <length>18</length>
    <type>Text</type>
</CustomField>