knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Education_c__c.field-meta.xml
<CustomField>
    <fullName>Education_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Education__c</externalDeveloperName>
    <label>Education</label>
    <type>Checkbox</type>
</CustomField>