knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Education_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Education_Comments_c__c</fullName>
    <externalDeveloperName>Education_Comments__c</externalDeveloperName>
    <label>Education Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>