knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Eligible_Auditor_c__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Auditor_c__c</fullName>
    <externalDeveloperName>Eligible_Auditor__c</externalDeveloperName>
    <label>Eligible Auditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>