knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Eligible_Coder_c__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Coder_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Eligible_Coder__c</externalDeveloperName>
    <label>Eligible Coder</label>
    <type>Checkbox</type>
</CustomField>