knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/EmailBouncedDate__c.field-meta.xml
<CustomField>
    <fullName>EmailBouncedDate__c</fullName>
    <externalDeveloperName>EmailBouncedDate</externalDeveloperName>
    <label>Email Bounced Date</label>
    <type>DateTime</type>
</CustomField>