knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Emergency_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_c__c</fullName>
    <externalDeveloperName>Emergency_Contact__c</externalDeveloperName>
    <label>Emergency Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>