knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Emergency_Contact_Phone_1_c__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone_1_c__c</fullName>
    <externalDeveloperName>Emergency_Contact_Phone_1__c</externalDeveloperName>
    <label>Emergency Contact Phone 1</label>
    <type>Phone</type>
</CustomField>