knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Emergency_Contact_Phone_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone_Number_c__c</fullName>
    <externalDeveloperName>Emergency_Contact_Phone_Number__c</externalDeveloperName>
    <label>Emergency Contact Phone Number</label>
    <type>Phone</type>
</CustomField>