knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Employee_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID_c__c</fullName>
    <externalDeveloperName>Employee_ID__c</externalDeveloperName>
    <label>Employee ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>