knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Employment_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status_c__c</fullName>
    <externalDeveloperName>Employment_Status__c</externalDeveloperName>
    <label>Employment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>