knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/EMR_Experience_c__c.field-meta.xml
<CustomField>
    <fullName>EMR_Experience_c__c</fullName>
    <externalDeveloperName>EMR_Experience__c</externalDeveloperName>
    <label>EMR Experience</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>