knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Estimated_Graduation_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Graduation_Date_c__c</fullName>
    <externalDeveloperName>Estimated_Graduation_Date__c</externalDeveloperName>
    <label>Estimated Graduation Date</label>
    <type>Date</type>
</CustomField>