knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Evacuation_Location_c__c.field-meta.xml
<CustomField>
    <fullName>Evacuation_Location_c__c</fullName>
    <externalDeveloperName>Evacuation_Location__c</externalDeveloperName>
    <label>Evacuation Location</label>
    <type>TextArea</type>
</CustomField>