knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Evacuation_Plan_for_Category_1_c__c.field-meta.xml
<CustomField>
    <fullName>Evacuation_Plan_for_Category_1_c__c</fullName>
    <externalDeveloperName>Evacuation_Plan_for_Category_1__c</externalDeveloperName>
    <label>Evacuation Plan for Category 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>