knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Ever_Board_Certified_c__c.field-meta.xml
<CustomField>
    <fullName>Ever_Board_Certified_c__c</fullName>
    <externalDeveloperName>Ever_Board_Certified__c</externalDeveloperName>
    <label>Ever Board Certified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>