knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/experianqas_Updated_Touchpoints_c__c.field-meta.xml
<CustomField>
    <fullName>experianqas_Updated_Touchpoints_c__c</fullName>
    <externalDeveloperName>experianqas__Updated_Touchpoints__c</externalDeveloperName>
    <label>Updated Touchpoints</label>
    <length>255</length>
    <type>Text</type>
</CustomField>