knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Experience_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Experience_Comments_c__c</fullName>
    <externalDeveloperName>Experience_Comments__c</externalDeveloperName>
    <label>Experience Comments</label>
    <type>TextArea</type>
</CustomField>