knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Extension_c__c.field-meta.xml
<CustomField>
    <fullName>Extension_c__c</fullName>
    <externalDeveloperName>Extension__c</externalDeveloperName>
    <label>Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>