knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Facebook_Username_c__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Username_c__c</fullName>
    <externalDeveloperName>Facebook_Username__c</externalDeveloperName>
    <label>Facebook Username</label>
    <type>TextArea</type>
</CustomField>