knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Facility_Reference_c__c.field-meta.xml
<CustomField>
    <fullName>Facility_Reference_c__c</fullName>
    <externalDeveloperName>Facility_Reference__c</externalDeveloperName>
    <label>Facility Reference</label>
    <type>TextArea</type>
</CustomField>