knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <externalDeveloperName>Fax</externalDeveloperName>
    <label>Business Fax</label>
    <type>Phone</type>
</CustomField>