knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Fellow_c__c.field-meta.xml
<CustomField>
    <fullName>Fellow_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Fellow__c</externalDeveloperName>
    <label>Fellow</label>
    <type>Checkbox</type>
</CustomField>