knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/First_Phone_c__c.field-meta.xml
<CustomField>
    <fullName>First_Phone_c__c</fullName>
    <externalDeveloperName>First_Phone__c</externalDeveloperName>
    <label>First Phone Found</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>