knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/First_Previous_City_c__c.field-meta.xml
<CustomField>
    <fullName>First_Previous_City_c__c</fullName>
    <externalDeveloperName>First_Previous_City__c</externalDeveloperName>
    <label>1st Previous City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>