knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/First_Previous_State_c__c.field-meta.xml
<CustomField>
    <fullName>First_Previous_State_c__c</fullName>
    <externalDeveloperName>First_Previous_State__c</externalDeveloperName>
    <label>1st Previous State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>