knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/First_Previous_Street_Address_c__c.field-meta.xml
<CustomField>
    <fullName>First_Previous_Street_Address_c__c</fullName>
    <externalDeveloperName>First_Previous_Street_Address__c</externalDeveloperName>
    <label>1st Previous Street Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>