knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/First_Previous_Zip_Code_c__c.field-meta.xml
<CustomField>
    <fullName>First_Previous_Zip_Code_c__c</fullName>
    <externalDeveloperName>First_Previous_Zip_Code__c</externalDeveloperName>
    <label>1st Previous Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>