knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Gender_c__c.field-meta.xml
<CustomField>
    <fullName>Gender_c__c</fullName>
    <externalDeveloperName>Gender__c</externalDeveloperName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>