knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Globalization_Partner_c__c.field-meta.xml
<CustomField>
    <fullName>Globalization_Partner_c__c</fullName>
    <externalDeveloperName>Globalization_Partner__c</externalDeveloperName>
    <label>Globalization Partner</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>