knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Google_Ad_Group_c__c.field-meta.xml
<CustomField>
    <fullName>Google_Ad_Group_c__c</fullName>
    <externalDeveloperName>Google_Ad_Group__c</externalDeveloperName>
    <label>Google Ad Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>