knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Google_Alert_Search_Term_s_c__c.field-meta.xml
<CustomField>
    <fullName>Google_Alert_Search_Term_s_c__c</fullName>
    <externalDeveloperName>Google_Alert_Search_Term_s__c</externalDeveloperName>
    <label>Google Alert Search Term(s)</label>
    <type>TextArea</type>
</CustomField>