knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Google_Campaign_c__c.field-meta.xml
<CustomField>
    <fullName>Google_Campaign_c__c</fullName>
    <externalDeveloperName>Google_Campaign__c</externalDeveloperName>
    <label>Google Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>