knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Google_Keyword_c__c.field-meta.xml
<CustomField>
    <fullName>Google_Keyword_c__c</fullName>
    <externalDeveloperName>Google_Keyword__c</externalDeveloperName>
    <label>Google Keyword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>