knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Google_Text_Ad_c__c.field-meta.xml
<CustomField>
    <fullName>Google_Text_Ad_c__c</fullName>
    <externalDeveloperName>Google_Text_Ad__c</externalDeveloperName>
    <label>Google Text Ad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>