knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/GP_Manager_s_Name_c__c.field-meta.xml
<CustomField>
    <fullName>GP_Manager_s_Name_c__c</fullName>
    <externalDeveloperName>GP_Manager_s_Name__c</externalDeveloperName>
    <label>GP Manager&apos;s Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>