knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/GP_Manager_s_Phone_Number_c__c.field-meta.xml
<CustomField>
    <fullName>GP_Manager_s_Phone_Number_c__c</fullName>
    <externalDeveloperName>GP_Manager_s_Phone_Number__c</externalDeveloperName>
    <label>GP Manager&apos;s Phone Number</label>
    <type>Phone</type>
</CustomField>