knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Has_this_employee_worked_for_another_GP__c.field-meta.xml
<CustomField>
    <fullName>Has_this_employee_worked_for_another_GP__c</fullName>
    <externalDeveloperName>Has_this_employee_worked_for_another_GP__c</externalDeveloperName>
    <label>Has this employee worked for another GP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>