knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Hire_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date_c__c</fullName>
    <externalDeveloperName>Hire_Date__c</externalDeveloperName>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>