knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Hiring_Request_Approved_Denied_c__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Request_Approved_Denied_c__c</fullName>
    <externalDeveloperName>Hiring_Request_Approved_Denied__c</externalDeveloperName>
    <label>Hiring Request Approved/Denied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>