knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/HM_Corporate_Tax_ID_c__c.field-meta.xml
<CustomField>
    <fullName>HM_Corporate_Tax_ID_c__c</fullName>
    <externalDeveloperName>HM_Corporate_Tax_ID__c</externalDeveloperName>
    <label>HM Corporate Tax ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>