knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/HM_Corporation_Address_c__c.field-meta.xml
<CustomField>
    <fullName>HM_Corporation_Address_c__c</fullName>
    <externalDeveloperName>HM_Corporation_Address__c</externalDeveloperName>
    <label>HM Corporation Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>