knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/HM_Corporation_Name_c__c.field-meta.xml
<CustomField>
    <fullName>HM_Corporation_Name_c__c</fullName>
    <externalDeveloperName>HM_Corporation_Name__c</externalDeveloperName>
    <label>HM Corporation Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>