knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/HM_Corporation_State_c__c.field-meta.xml
<CustomField>
    <fullName>HM_Corporation_State_c__c</fullName>
    <externalDeveloperName>HM_Corporation_State__c</externalDeveloperName>
    <label>HM Corporation State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>