knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/HM_Corporation_Verification_Date_c__c.field-meta.xml
<CustomField>
    <fullName>HM_Corporation_Verification_Date_c__c</fullName>
    <externalDeveloperName>HM_Corporation_Verification_Date__c</externalDeveloperName>
    <label>HM Corporation Verification Date</label>
    <type>Date</type>
</CustomField>