knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Hobbies_Interest_c__c.field-meta.xml
<CustomField>
    <fullName>Hobbies_Interest_c__c</fullName>
    <externalDeveloperName>Hobbies_Interest__c</externalDeveloperName>
    <label>Hobbies/Interest</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>