knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Home_City_c__c.field-meta.xml
<CustomField>
    <fullName>Home_City_c__c</fullName>
    <externalDeveloperName>Home_City__c</externalDeveloperName>
    <label>Home City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>