knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Home_Fax_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Home_Fax_Number_c__c</fullName>
    <externalDeveloperName>Home_Fax_Number__c</externalDeveloperName>
    <label>Home Fax Number</label>
    <type>Phone</type>
</CustomField>