knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Home_State_c__c.field-meta.xml
<CustomField>
    <fullName>Home_State_c__c</fullName>
    <externalDeveloperName>Home_State__c</externalDeveloperName>
    <label>Home State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>