knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Home_Street_Address_c__c.field-meta.xml
<CustomField>
    <fullName>Home_Street_Address_c__c</fullName>
    <externalDeveloperName>Home_Street_Address__c</externalDeveloperName>
    <label>Home Street Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>