knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Home_Zip_Postal_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Home_Zip_Postal_Code_c__c</fullName>
    <externalDeveloperName>Home_Zip_Postal_Code__c</externalDeveloperName>
    <label>Home Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>