knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <externalDeveloperName>HomePhone</externalDeveloperName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>