knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Hospital_CEO_c__c.field-meta.xml
<CustomField>
    <fullName>Hospital_CEO_c__c</fullName>
    <externalDeveloperName>Hospital_CEO__c</externalDeveloperName>
    <label>Hospital CEO Lastname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>