knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Hospital_CEO_Firstname_c__c.field-meta.xml
<CustomField>
    <fullName>Hospital_CEO_Firstname_c__c</fullName>
    <externalDeveloperName>Hospital_CEO_Firstname__c</externalDeveloperName>
    <label>Hospital CEO Firstname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>