knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/How_Long_at_Previous_Address_c__c.field-meta.xml
<CustomField>
    <fullName>How_Long_at_Previous_Address_c__c</fullName>
    <externalDeveloperName>How_Long_at_Previous_Address__c</externalDeveloperName>
    <label>How Long at Previous Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>