knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/IM_Username_c__c.field-meta.xml
<CustomField>
    <fullName>IM_Username_c__c</fullName>
    <externalDeveloperName>IM_Username__c</externalDeveloperName>
    <label>IM Username</label>
    <type>TextArea</type>
</CustomField>