knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Impaired_Physican_c__c.field-meta.xml
<CustomField>
    <fullName>Impaired_Physican_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Impaired_Physican__c</externalDeveloperName>
    <label>Impaired Provider</label>
    <type>Checkbox</type>
</CustomField>