knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Inactive_c__c.field-meta.xml
<CustomField>
    <fullName>Inactive_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Inactive__c</externalDeveloperName>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>