knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Inactive_State_Licenses_c__c.field-meta.xml
<CustomField>
    <fullName>Inactive_State_Licenses_c__c</fullName>
    <externalDeveloperName>Inactive_State_Licenses__c</externalDeveloperName>
    <label>Inactive State Licenses</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>