knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Incentive_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Date_c__c</fullName>
    <externalDeveloperName>Incentive_Date__c</externalDeveloperName>
    <label>Incentive Date</label>
    <type>Date</type>
</CustomField>