knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/IncentivePrimaryRecruiter_c__c.field-meta.xml
<CustomField>
    <fullName>IncentivePrimaryRecruiter_c__c</fullName>
    <externalDeveloperName>IncentivePrimaryRecruiter__c</externalDeveloperName>
    <label>Incentive - Primary Recruiter</label>
    <length>18</length>
    <type>Text</type>
</CustomField>