knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/IncentiveRecruiter2_c__c.field-meta.xml
<CustomField>
    <fullName>IncentiveRecruiter2_c__c</fullName>
    <externalDeveloperName>IncentiveRecruiter2__c</externalDeveloperName>
    <label>Incentive - Recruiter2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>