knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/IncentiveRecruiter3_c__c.field-meta.xml
<CustomField>
    <fullName>IncentiveRecruiter3_c__c</fullName>
    <externalDeveloperName>IncentiveRecruiter3__c</externalDeveloperName>
    <label>Incentive -Recruiter3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>