knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Individual_Tax_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Individual_Tax_ID_c__c</fullName>
    <externalDeveloperName>Individual_Tax_ID__c</externalDeveloperName>
    <label>Individual Tax ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>