knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Information_Preference_c__c.field-meta.xml
<CustomField>
    <fullName>Information_Preference_c__c</fullName>
    <externalDeveloperName>Information_Preference__c</externalDeveloperName>
    <label>Information Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>