knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Insurance_c__c.field-meta.xml
<CustomField>
    <fullName>Insurance_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Insurance__c</externalDeveloperName>
    <label>Insurance</label>
    <type>Checkbox</type>
</CustomField>