knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Interest_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Interest_Comments_c__c</fullName>
    <externalDeveloperName>Interest_Comments__c</externalDeveloperName>
    <label>Interest Comments</label>
    <type>TextArea</type>
</CustomField>