knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Interested_in_Emergency_HM_Directorship__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Emergency_HM_Directorship__c</fullName>
    <externalDeveloperName>Interested_in_Emergency_HM_Directorship__c</externalDeveloperName>
    <label>Interested in Emergency/HM/Directorship</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>