knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Interested_in_Full_Time_Part_Time_Locum__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Full_Time_Part_Time_Locum__c</fullName>
    <externalDeveloperName>Interested_in_Full_Time_Part_Time_Locum__c</externalDeveloperName>
    <label>Interested in FT/PT/Locum Tenens</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>