knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Interested_in_Leadership_Position_c__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Leadership_Position_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Interested_in_Leadership_Position__c</externalDeveloperName>
    <label>Interested in Leadership Position</label>
    <type>Checkbox</type>
</CustomField>