knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/Interested_in_Multiple_States_c__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Multiple_States_c__c</fullName>
    <externalDeveloperName>Interested_in_Multiple_States__c</externalDeveloperName>
    <label>Interested in Multiple States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>