knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/International_Fax_c__c.field-meta.xml
<CustomField>
    <fullName>International_Fax_c__c</fullName>
    <externalDeveloperName>International_Fax__c</externalDeveloperName>
    <label>International Fax</label>
    <type>Phone</type>
</CustomField>