knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/International_Home_c__c.field-meta.xml
<CustomField>
    <fullName>International_Home_c__c</fullName>
    <externalDeveloperName>International_Home__c</externalDeveloperName>
    <label>International Home</label>
    <type>Phone</type>
</CustomField>