knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/International_Mobile_c__c.field-meta.xml
<CustomField>
    <fullName>International_Mobile_c__c</fullName>
    <externalDeveloperName>International_Mobile__c</externalDeveloperName>
    <label>International Mobile</label>
    <type>Phone</type>
</CustomField>