knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/International_Work_c__c.field-meta.xml
<CustomField>
    <fullName>International_Work_c__c</fullName>
    <externalDeveloperName>International_Work__c</externalDeveloperName>
    <label>International Work</label>
    <type>Phone</type>
</CustomField>