knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/IsEmailBounced__c.field-meta.xml
<CustomField>
    <fullName>IsEmailBounced__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsEmailBounced</externalDeveloperName>
    <label>Is Email Bounced</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>