knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/IsMedicalLeadership_c__c.field-meta.xml
<CustomField>
    <fullName>IsMedicalLeadership_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsMedicalLeadership__c</externalDeveloperName>
    <label>Is Medical Leadership</label>
    <type>Checkbox</type>
</CustomField>