knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/iTriage_Authorization_Received_c__c.field-meta.xml
<CustomField>
    <fullName>iTriage_Authorization_Received_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>iTriage_Authorization_Received__c</externalDeveloperName>
    <label>iTriage Authorization Received</label>
    <type>Checkbox</type>
</CustomField>