knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact__x/fields/iTriage_DL_c__c.field-meta.xml
<CustomField>
    <fullName>iTriage_DL_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>iTriage_DL__c</externalDeveloperName>
    <label>iTriage DL</label>
    <type>Checkbox</type>
</CustomField>